Changelog
---------

1.2.1 (unreleased)
~~~~~~~~~~~~~~~~~~

* Fix missing internationnalization (#8608 thanks to Vincent Fretin)
  [encolpe]

1.2.0 (October 24th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~~

* Allow users without modify content permissions (but with the iterate
  check out permission) to check out items, and only allow them to
  check in back again only when they have modify content permissions.
  [nouri]

1.1.5 (August 18th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~

* Fixed typo in subscribers/workflow.py. This fixes
  https://dev.plone.org/plone/ticket/8035.
  [dunlapm]

* Added i18n of status messages. This fixes part of 
  http://dev.plone.org/plone/ticket/8022.
  [naro]

1.1.0 (April 20th 2008)
~~~~~~~~~~~~~~~~~~~~~~~

* Fixed dodgy test in test_iterate.py that was dependent on semantics of 
  default workflow.
  [optilude]

* Fixed i18n markup and updated some messages. This closes
  http://dev.plone.org/plone/ticket/7958.
  [hannosch]

* Updated i18n:domain in templates to the plone domain. There's no need for a
  iterate domain.
  [hannosch]

* Use README.txt and HISTORY.txt for the package's long description.
  [wichert]

* Remove unneeded intialize method from __init__
  [wichert]

1.0
~~~

* First release